網域完成設置

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -136,14 +136,14 @@
         <div class="flex justify-between items-center">
             
             <div>
-    <a href="https://zhuyixuan-official-site.netlify.app/" class="flex items-end gap-1">
+    <a href="https://zhu-yi-xuan.com/" class="flex items-end gap-1">
         <img src="/images/New logo.png" alt="竹意軒的咖啡工坊 Logo" class="h-12 w-auto">
         <span class="font-noto-serif text-gray-600 text-xs leading-none pb-2">咖啡工坊</span>
     </a>
 </div>
 
             <div class="hidden md:flex items-center space-x-8">
-                <a href="https://zhuyixuan-official-site.netlify.app/" class="text-amber-800 hover:text-amber-600 font-bold border-r border-gray-300 pr-8">返回首頁</a>
+                <a href="https://zhu-yi-xuan.com/" class="text-amber-800 hover:text-amber-600 font-bold border-r border-gray-300 pr-8">返回首頁</a>
                 <a href="#about-single-origin" class="text-gray-600 hover:text-amber-800">關於單品</a>
                 <a href="#processing-methods" class="text-gray-600 hover:text-amber-800">咖啡處理法</a>
                 <a href="#explore-flavors" class="text-gray-600 hover:text-amber-800">探索風味</a>
@@ -164,7 +164,7 @@
         </div>
         
         <div id="mobile-menu" class="hidden md:hidden mt-4">
-            <a href="https://zhuyixuan-official-site.netlify.app/" class="block py-2 font-bold text-amber-800 hover:text-amber-600">返回首頁</a>
+            <a href="https://zhu-yi-xuan.com/" class="block py-2 font-bold text-amber-800 hover:text-amber-600">返回首頁</a>
             <a href="#about-single-origin" class="block py-2 text-gray-600 hover:text-amber-800">關於單品</a>
             <a href="#processing-methods" class="block py-2 text-gray-600 hover:text-amber-800">咖啡處理法</a>
             <a href="#explore-flavors" class="block py-2 text-gray-600 hover:text-amber-800">探索風味</a>
