--- a/coffee/index.html
+++ b/coffee/index.html
@@ -278,7 +278,7 @@
 
             <div class="bg-white p-6 md:p-8 rounded-lg shadow-md flex flex-col items-center text-center gap-4">
                 <div class="w-full h-48 flex items-center justify-center">
-                    <img src="/images/america.png" alt="中南美洲咖啡產區地圖" class="w-full h-full object-contain">
+                    <img src="/images/america.jpg" alt="中南美洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
                     <h3 class="text-2xl font-bold text-green-500 mb-2">中南美洲 The Americas</h3>
@@ -289,7 +289,7 @@
 
             <div class="bg-white p-6 md:p-8 rounded-lg shadow-md flex flex-col items-center text-center gap-4">
                 <div class="w-full h-48 flex items-center justify-center">
-                    <img src="/images/africa.png" alt="非洲咖啡產區地圖" class="w-full h-full object-contain">
+                    <img src="/images/africa.jpg" alt="非洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
                     <h3 class="text-2xl font-bold text-red-500 mb-2">非洲 Africa</h3>
@@ -300,7 +300,7 @@
 
             <div class="bg-white p-6 md:p-8 rounded-lg shadow-md flex flex-col items-center text-center gap-4">
                 <div class="w-full h-48 flex items-center justify-center">
-                    <img src="/images/Asia.png" alt="亞洲咖啡產區地圖" class="w-full h-full object-contain">
+                    <img src="/images/Asia.jpg" alt="亞洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
                     <h3 class="text-2xl font-bold text-yellow-500 mb-2">亞洲 Asia</h3>
@@ -311,7 +311,7 @@
             
             <div class="bg-white p-6 md:p-8 rounded-lg shadow-md flex flex-col items-center text-center gap-4">
                 <div class="w-full h-48 flex items-center justify-center">
-                    <img src="/images/aus.png" alt="大洋洲咖啡產區地圖" class="w-full h-full object-contain">
+                    <img src="/images/aus.jpg" alt="大洋洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
                     <h3 class="text-2xl font-bold text-blue-500 mb-2">大洋洲 Oceania</h3>
