--- a/coffee/index.html
+++ b/coffee/index.html
@@ -333,7 +333,7 @@
                     <!-- 粉水比例 -->
                     <div class="text-center">
                         <div class="w-20 h-20 mx-auto mb-4 flex items-center justify-center bg-amber-100 rounded-full">
-                           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#A0522D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-ratio"><rect width="12" height="12" x="6" y="6" rx="2"/><path d="m18 18-6-6"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#A0522D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-weight-icon lucide-weight"><circle cx="12" cy="5" r="3"/><path d="M6.5 8a2 2 0 0 0-1.905 1.46L2.1 18.5A2 2 0 0 0 4 21h16a2 2 0 0 0 1.925-2.54L19.4 9.5A2 2 0 0 0 17.48 8Z"/></svg>
                         </div>
                         <h4 class="text-xl font-bold mb-2">粉水比例</h4>
                         <p class="text-gray-600">從 1:15 開始 (20g粉 : 300g水)，再依喜好調整比例。</p>
@@ -341,7 +341,7 @@
                     <!-- 研磨粗細 -->
                     <div class="text-center">
                         <div class="w-20 h-20 mx-auto mb-4 flex items-center justify-center bg-amber-100 rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#A0522D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-whole-word"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/><path d="M12 12H8"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#A0522D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-grip-icon lucide-grip"><circle cx="12" cy="5" r="1"/><circle cx="19" cy="5" r="1"/><circle cx="5" cy="5" r="1"/><circle cx="12" cy="12" r="1"/><circle cx="19" cy="12" r="1"/><circle cx="5" cy="12" r="1"/><circle cx="12" cy="19" r="1"/><circle cx="19" cy="19" r="1"/><circle cx="5" cy="19" r="1"/></svg>
                         </div>
                         <h4 class="text-xl font-bold mb-2">研磨粗細</h4>
                         <p class="text-gray-600">可以設定研磨度約於二號砂糖顆粒大小，視流速調整。</p>
@@ -357,7 +357,7 @@
                     <!-- 沖煮時間 -->
                     <div class="text-center">
                         <div class="w-20 h-20 mx-auto mb-4 flex items-center justify-center bg-amber-100 rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#A0522D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="12" y1="6" y2="6"/><circle cx="12" cy="14" r="8"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#A0522D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-whole-word"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/><path d="M12 12H8"/></svg>
                         </div>
                         <h4 class="text-xl font-bold mb-2">沖煮時間</h4>
                         <p class="text-gray-600">包含悶蒸，總時間控制在約莫 2 至 2.5 分鐘。</p>
