--- a/coffee/index.html
+++ b/coffee/index.html
@@ -546,7 +546,7 @@ document.addEventListener('DOMContentLoaded', () => {
             totalItems += item.quantity;
             const itemEl = document.createElement('div');
             itemEl.className = 'flex justify-between items-center mb-4 p-2 border-b';
-            itemEl.innerHTML = `<div class="w-3/4"><p class="font-bold truncate">${item.name}</p><p class="text-sm text-gray-600">NT$ ${item.price} x ${item.quantity}</p></div><div class="w-1/4 text-right"><button class="remove-from-cart-btn text-red-500 hover:text-red-700 text-sm" data-id="${item.id}">移除</button></div>`;
+            itemEl.innerHTML = `<div class="w-3/4"><p class="font-bold">${item.name}</p><p class="text-sm text-gray-600">NT$ ${item.price} x ${item.quantity}</p></div><div class="w-1/4 text-right"><button class="remove-from-cart-btn text-red-500 hover:text-red-700 text-sm" data-id="${item.id}">移除</button></div>`;
             cartItemsContainer.appendChild(itemEl);
         });
         if (totalItems > 0) {
