--- a/platycerium/platycerium.html
+++ b/platycerium/platycerium.html
@@ -569,8 +569,8 @@
         <p class="text-center text-gray-500 mb-10">觀看影片，更了解鹿角蕨的上板技巧</p>
         
         <div class="max-w-3xl mx-auto">
-            <a href="#" id="open-video-btn" data-youtube-id="-RGBVpfNngY" class="block relative rounded-lg overflow-hidden shadow-lg card-hover">
-                <img src="https://img.youtube.com/vi/-RGBVpfNngY/maxresdefault.jpg" alt="鹿角蕨上板教學影片封面" class="w-full">
+            <a href="#" id="open-video-btn" data-youtube-id="-rGBVpfNngY" class="block relative rounded-lg overflow-hidden shadow-lg card-hover">
+                <img src="https://img.youtube.com/vi/-rGBVpfNngY/maxresdefault.jpg" alt="鹿角蕨上板教學影片封面" class="w-full">
                 <div class="absolute inset-0 flex items-center justify-center bg-black/30">
                     <svg class="w-20 h-20 text-white/80" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"></path></svg>
                 </div>
