--- a/coffee/index.html
+++ b/coffee/index.html
@@ -148,7 +148,7 @@
                 <a href="#processing-methods" class="text-gray-600 hover:text-amber-800">咖啡處理法</a>
                 <a href="#explore-flavors" class="text-gray-600 hover:text-amber-800">探索風味</a>
                 <a href="#pour-over-guide" class="text-gray-600 hover:text-amber-800">手沖建議</a>
-                <a href="#bean-list" class="text-gray-600 hover:text-green-700">本期豆單</a>
+                <a href="#product-list" class="text-gray-600 hover:text-green-700">本期豆單</a>
                 <a href="query.html" class="text-gray-600 hover:text-amber-800">訂單查詢</a>
                 <button id="open-cart-btn" class="relative text-gray-600 hover:text-amber-800">
                     <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
@@ -170,7 +170,7 @@
             <a href="#processing-methods" class="block py-2 text-gray-600 hover:text-amber-800">咖啡處理法</a>
             <a href="#explore-flavors" class="block py-2 text-gray-600 hover:text-amber-800">探索風味</a>
             <a href="#pour-over-guide" class="block py-2 text-gray-600 hover:text-amber-800">手沖建議</a>
-            <a href="#bean-list" class="block py-2 text-gray-600 hover:text-green-700">本期豆單</a>
+            <a href="#product-list" class="block py-2 text-gray-600 hover:text-green-700">本期豆單</a>
             <a href="query.html" class="block py-2 text-gray-600 hover:text-amber-800">訂單查詢</a>
             <div class="pt-4 border-t mt-2">
                 <button id="open-cart-btn" class="relative text-gray-600 hover:text-amber-800 inline-flex items-center">
