--- a/coffee/query.html
+++ b/coffee/query.html
@@ -10,6 +10,9 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="w-full max-w-md bg-white p-8 rounded-lg shadow-lg">
+        <div class="flex justify-center mb-8">
+        <img src="/images/New logo.png" alt="竹意軒 Logo" class="h-16 w-auto">
+    </div>
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">訂單進度查詢</h1>
         <div class="mb-4">
             <label for="order-id-input" class="block text-gray-700 text-sm font-bold mb-2">請輸入您的訂單編號：</label>
