--- a/coffee/thankyou.html
+++ b/coffee/thankyou.html
@@ -14,6 +14,9 @@
 </head>
 <body class="flex items-center justify-center min-h-screen">
     <div class="text-center p-10 bg-white rounded-lg shadow-xl max-w-lg">
+        <div class="mb-6">
+        <img src="/images/New logo.png" alt="竹意軒 Logo" class="h-20 w-auto mx-auto">
+    </div>
         <svg class="w-24 h-24 text-green-500 mx-auto mb-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
         <h1 class="text-3xl font-bold text-gray-800 mb-4">感謝您的訂購！</h1>
         <p class="text-gray-600 mb-2">我們已成功收到您的訂單，將會盡快為您處理。</p>
