--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     在竹意軒，我們要求對細節的專注。從培育一株姿態獨特的鹿角蕨，到悉心烘焙、沖煮一杯風味細膩的單品咖啡，加入堅持，融入日常的每一刻。
                 </p>
                 <p class="text-lg text-gray-600 leading-relaxed">
-                    我們邀請您，一同感受這份由綠意與醇香交織而成的靜謐與美好。
+                    我們邀請您，一同感受這份由綠意與醇香交織的靜謐與美好。
                 </p>
             </div>
         </section>
