測試發布版

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -209,10 +209,10 @@
                 <div class="md:w-1/2 w-full flex justify-center">
                     <div class="max-w-md">
                         <p class="text-lg mb-4 text-gray-700">
-                            單品咖啡 (Single Origin Coffee) 指的是來自『單一來源』的咖啡豆，廣義可以大至國家、地區，細至處理廠、農民。單品咖啡最大的特點是他的可追朔性。
+                            單品咖啡 (Single Origin Coffee) 指的是來自『單一來源』的咖啡豆，廣義可以大至國家、地區，細至處理廠、農民。可說最大的特點是他的可追朔性。
                         </p>
                         <p class="text-lg mb-4 text-gray-700">
-                            烘豆師、吧台手、消費者都可以藉由資訊來了解咖啡來源，愛好者可以大致聯想這隻豆子沖煮出來的風味，透過比較不同來源的咖啡為樂趣來品嘗咖啡。
+                            烘豆師、吧台手、消費者都可以藉由資訊來了解咖啡來源，愛好者也夠大致聯想這隻豆子沖煮出來的風味，透過比較不同來源的咖啡為樂趣來品嘗咖啡。
                         </p>
                         <p class="text-lg mb-4 text-gray-700">
                             相對於追求風味平衡穩定的「配方豆」，單品咖啡更像是一場探索，讓您能比較不同風土環境下所產製出來的咖啡，感受咖啡多樣的樣貌。
@@ -234,7 +234,7 @@
                     </div>
                     <h3 class="text-2xl font-bold mb-3 text-amber-700">日曬法</h3>
                     <p class="text-gray-600">
-                        又稱自然乾燥法，將整顆咖啡果實直接曝曬，於乾燥的過程中，讓果肉的糖分與風味滲入豆中。風味通常較濃郁奔放，具有熱帶水果發酵感。
+                        又稱自然乾燥法，將整顆咖啡果實直接曝曬，於乾燥的過程中，果肉的糖分與風味會滲入豆中。風味通常較濃郁奔放，具有熱帶水果發酵感。
                     </p>
                 </div>
                 <!-- 水洗法卡片 -->
@@ -244,7 +244,7 @@
                     </div>
                     <h3 class="text-2xl font-bold mb-3 text-blue-700">水洗法</h3>
                     <p class="text-gray-600">
-                        先去除果皮果肉，再於水洗槽中進行發酵，目的是洗去果膠層，最後再進行乾燥。風味最能反映產區原始特色，口感乾淨明亮、酸質活潑、層次清晰。
+                        先去除果皮果肉，再於水洗槽中進行發酵，目的是去除果膠層，最後再進行乾燥。風味最能反映產區原始特色，口感乾淨明亮、酸質活潑、層次清晰。
                     </p>
                 </div>
                 <!-- 蜜處理卡片 -->
@@ -254,7 +254,7 @@
                     </div>
                     <h3 class="text-2xl font-bold mb-3 text-red-700">蜜處理</h3>
                     <p class="text-gray-600">
-                        去除果皮後，保留帶有甜份的果肉層進行乾燥。風味根據保留的果肉厚度以及乾燥時間有影響，大致介於日曬與水洗處理法間，兼具果香與乾淨度。
+                        去除果皮後，保留帶有甜份的果肉層進行乾燥。風味隨保留的果肉厚度以及乾燥時間而影響，大致介於日曬與水洗處理法間，兼具發酵果香與乾淨度。
                     </p>
                 </div>
                 <!-- 厭氧處理卡片 -->
@@ -338,7 +338,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#A0522D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-weight-icon lucide-weight"><circle cx="12" cy="5" r="3"/><path d="M6.5 8a2 2 0 0 0-1.905 1.46L2.1 18.5A2 2 0 0 0 4 21h16a2 2 0 0 0 1.925-2.54L19.4 9.5A2 2 0 0 0 17.48 8Z"/></svg>
                         </div>
                         <h4 class="text-xl font-bold mb-2">粉水比例</h4>
-                        <p class="text-gray-600">從 1:15 開始 (20g粉 : 300g水)，再依喜好調整比例。</p>
+                        <p class="text-gray-600">從 1:15 開始 (如20g粉 : 300g水)，再依喜好調整比例。</p>
                     </div>
                     <!-- 研磨粗細 -->
                     <div class="text-center">
