--- a/platycerium/platycerium.html
+++ b/platycerium/platycerium.html
@@ -389,14 +389,14 @@
                         <p class="text-gray-600 text-sm">貓路易士鹿角蕨個體，具細緻孢子葉片。</p>
                     </div>
                 </div>
-                <div class="species-card bg-white rounded-lg shadow-md overflow-hidden card-hover" data-group="">
+            <!--  <div class="species-card bg-white rounded-lg shadow-md overflow-hidden card-hover" data-group="">
                     <img src="/images/P1270493.JPG" alt="亞洲猴腦鹿角蕨" class="w-full h-84 object-cover">
                     <div class="p-5">
                         <h3 class="text-xl font-bold text-gray-800">亞洲猴腦鹿角蕨</h3>
                         <p class="text-sm italic text-gray-500 mb-2">P. ridleyi</p>
                         <p class="text-gray-600 text-sm">營養葉有著如大腦般深刻的紋路，孢子葉直立向上，栽培難度較高。</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="species-card bg-white rounded-lg shadow-md overflow-hidden card-hover" data-group="">
                     <img src="/images/White Wing.jpg" alt="白翼鹿角蕨" class="w-full h-84 object-cover">
                     <div class="p-5">
@@ -413,14 +413,14 @@
                         <p class="text-gray-600 text-sm">爪哇鹿角蕨個體，具白皙且細緻的流線孢子葉。</p>
                     </div>
                 </div>
-                <div class="species-card bg-white rounded-lg shadow-md overflow-hidden card-hover" data-group="malay-asia">
+            <!--    <div class="species-card bg-white rounded-lg shadow-md overflow-hidden card-hover" data-group="malay-asia">
                     <img src="https://placehold.co/600x400/ef4444/ffffff?text=P.+wallichii" alt="蝴蝶鹿角蕨" class="w-full h-84 object-cover">
                     <div class="p-5">
                         <h3 class="text-xl font-bold text-gray-800">蝴蝶鹿角蕨</h3>
                         <p class="text-sm italic text-gray-500 mb-2">P. wallichii</p>
                         <p class="text-gray-600 text-sm">孢子葉寬大如蝶翼，有季節性休眠特性，栽培難度高，是收藏家的目標。</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="species-card bg-white rounded-lg shadow-md overflow-hidden card-hover" data-group="malay-asia">
                     <img src="/images/wandae.jpg" alt="女王鹿角蕨 (圖片待補)" class="w-full h-84 object-cover">
                     <div class="p-5">
@@ -567,7 +567,7 @@
     </main>
     <section id="video-guide" class="bg-white py-6 md:py-8">
     <div class="container mx-auto px-6 text-center">
-        <h2 class="text-3xl font-bold text-center mb-2 text-gray-800">栽培示範影片</h2>
+        <h2 class="text-3xl font-bold text-center mb-2 text-gray-800">鹿角影像</h2>
         <p class="text-center text-gray-500 mb-10">觀看影片，更了解鹿角蕨的上板與照護技巧</p>
         
         <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
