--- a/coffee/index.html
+++ b/coffee/index.html
@@ -283,7 +283,7 @@
                     <img src="/images/america.jpg" alt="中南美洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
-                    <h3 class="text-2xl font-bold text-green-500 mb-2">中南美洲 The Americas</h3>
+                    <h3 class="text-2xl font-bold text-emerald-400 mb-2">中南美洲 The Americas</h3>
                     <p class="text-l text-gray-600">全球最大的咖啡產地，風味均衡、樣貌多元，從溫和的堅果、巧克力到明亮的果酸調性皆有，各式處理法也百花齊放。</p>
                     <p class="mt-3 text-l font-semibold text-gray-800">重要產區：<span class="font-normal">哥倫比亞、巴西、瓜地馬拉、薩爾瓦多以及加勒比海地區等等</span></p>
                 </div>
