--- a/coffee/index.html
+++ b/coffee/index.html
@@ -368,7 +368,7 @@
             </div>
         </section>
         <section id="product-list" class="mt-12 md:mt-16 mb-12 md:mb-16 scroll-mt-16">
-    <h2 class="text-3xl font-bold text-center mb-2 text-gray-800">本期精選咖啡</h2>
+    <h2 class="text-3xl font-bold text-center mb-2 text-gray-800">本期精選咖啡 <span style="color: red;">(本月限時600元免運)</span></h2>
     <p class="text-center text-gray-500 mb-10">來自世界咖啡產區的風土滋味</p>
     <div id="filter-buttons" class="flex justify-center gap-4 md:gap-6 mb-10">
         <button class="tab-btn active" data-filter="all">所有商品</button>
