--- a/coffee/index.html
+++ b/coffee/index.html
@@ -329,7 +329,7 @@
         <!-- Section 4: 手沖準則 -->
         <section id="pour-over-guide" class="scroll-mt-20">
             <h2 class="text-3xl font-bold text-center mb-2 text-gray-800">手沖咖啡建議準則</h2>
-            <p class="text-center text-gray-500 mb-10">確認四個小關鍵，調整出您的喜愛咖啡</p>
+            <p class="text-center text-gray-500 mb-10">確認四個小關鍵，調整出您喜愛的咖啡</p>
             <div class="bg-white rounded-lg shadow-lg p-8 md:p-12">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
                     <!-- 粉水比例 -->
