--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <h2 class="text-3xl font-bold mb-4 text-gray-800">關於竹意軒</h2>
                 <p class="text-lg text-gray-600 leading-relaxed">
                     竹意軒，位於宜蘭的植栽咖啡品牌。</p>
-                <p class="text-lg text-gray-600 leading-relaxed">從培育一株姿態獨特的鹿角蕨，到悉心烘焙、沖煮一杯風味細膩的單品咖啡。 </p>
+                <p class="text-lg text-gray-600 leading-relaxed">從培育一株姿態獨特的鹿角蕨或觀賞植物，到悉心烘焙、沖煮一杯風味細膩的單品咖啡。 </p>
                 <p class="text-lg text-gray-600 leading-relaxed">由負責人的學成專業以及興趣，變成每日的工作日常。
                 </p>
                 <p class="text-lg text-gray-600 leading-relaxed">
