--- a/platycerium/platycerium.html
+++ b/platycerium/platycerium.html
@@ -494,10 +494,10 @@
                 </div>
             </div>
         </section>
-        <section id="video-guide" class="bg-white py-12 md:py-16">
+        <section id="video-guide" class="bg-white py-16 md:py-20">
     <div class="container mx-auto px-6 text-center">
         <h2 class="text-3xl font-bold text-center mb-2 text-gray-800">鹿角影像</h2>
-        <p class="text-center text-gray-500 mb-10">我們園區裡的鹿角栽培與植物留影</p>
+        <p class="text-center text-gray-500 mb-10">鹿角蕨栽培操作與植物影像紀錄</p>
         
         <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
             
@@ -506,7 +506,7 @@
                 <div class="absolute inset-0 flex items-center justify-center bg-black/30">
                     <svg class="w-16 h-16 text-white/80" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"></path></svg>
                 </div>
-                <div class="absolute bottom-0 left-0 bg-black/50 text-white text-sm p-2 w-full">鹿角蕨上板示範</div>
+                <div class="absolute bottom-0 left-0 bg-black/50 text-white text-sm p-2 w-full">鹿角蕨上板</div>
             </a>
 
             <a href="#" class="open-video-btn block relative rounded-lg overflow-hidden shadow-lg card-hover" data-youtube-id="6wXAnZiMWPs"> <img src="/images/AR sporeling.jpg" alt="影片二封面" class="w-full aspect-video object-cover">
