--- a/coffee/query.html
+++ b/coffee/query.html
@@ -6,80 +6,251 @@
     <title>訂單查詢 - 竹意軒的咖啡工坊</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-auth-compat.js"></script>
     <style> body { font-family: 'Noto Sans TC', sans-serif; background-color: #FDFBF8; } </style>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="w-full max-w-md bg-white p-8 rounded-lg shadow-lg">
+    <div class="w-full max-w-2xl bg-white p-8 rounded-lg shadow-lg">
         <div class="flex justify-center mb-4">
-        <a href="/coffee/index.html"><img src="/images/New logo.png" alt="竹意軒 Logo" class="h-16 w-auto"></a>
-    </div>
-        <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">訂單進度查詢</h1>
-        <div class="mb-4">
-            <label for="order-id-input" class="block text-gray-700 text-sm font-bold mb-2">請輸入您的訂單編號：</label>
-            <input type="text" id="order-id-input" class="shadow appearance-none border rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="例如 bamboo123456789">
+            <a href="/coffee/index.html"><img src="/images/New logo.png" alt="竹意軒 Logo" class="h-16 w-auto"></a>
         </div>
-        <button id="query-btn" class="w-full bg-amber-800 hover:bg-amber-900 text-white font-bold py-3 px-4 rounded-lg transition-colors">
-            查詢
-        </button>
-        <div id="result-container" class="mt-8 p-6 bg-gray-50 rounded-md" style="display: none;">
-    <h2 class="text-xl font-bold text-gray-700 mb-4">查詢結果</h2>
-    <p id="result-text" class="text-lg text-gray-800"></p>
+        <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">訂單查詢</h1>
 
-    <div id="items-container" class="mt-4 pt-4 border-t" style="display: none;">
-        <h4 class="font-bold text-gray-700">訂購品項：</h4>
-        <pre id="items-list" class="text-gray-600 whitespace-pre-wrap font-sans"></pre>
-    </div>
-        <div class="text-center mt-6">
+        <div class="flex border-b mb-6">
+            <button id="tab-single" class="py-2 px-4 bg-amber-800 text-white font-semibold rounded-t-lg focus:outline-none">依訂單編號查詢</button>
+            <button id="tab-history" class="py-2 px-4 bg-gray-200 text-gray-600 font-semibold rounded-t-lg focus:outline-none">查詢歷史訂單</button>
+        </div>
+
+        <div id="content-single">
+            <div class="mb-4">
+                <label for="order-id-input" class="block text-gray-700 text-sm font-bold mb-2">請輸入您的訂單編號：</label>
+                <input type="text" id="order-id-input" class="shadow appearance-none border rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="例如 bamboo123456789">
+            </div>
+            <button id="query-btn-single" class="w-full bg-amber-800 hover:bg-amber-900 text-white font-bold py-3 px-4 rounded-lg transition-colors">
+                查詢
+            </button>
+            <div id="result-container-single" class="mt-8 p-6 bg-gray-50 rounded-md" style="display: none;">
+                <h2 class="text-xl font-bold text-gray-700 mb-4">查詢結果</h2>
+                <p id="result-text-single" class="text-lg text-gray-800"></p>
+                <div id="items-container-single" class="mt-4 pt-4 border-t" style="display: none;">
+                    <h4 class="font-bold text-gray-700">訂購品項：</h4>
+                    <pre id="items-list-single" class="text-gray-600 whitespace-pre-wrap font-sans"></pre>
+                </div>
+            </div>
+        </div>
+
+        <div id="content-history" style="display: none;">
+            <div id="history-login-view">
+                <p class="text-center text-gray-600 mb-4">請登入以查看您的所有歷史訂單記錄。</p>
+                <button id="login-btn-google" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg flex items-center justify-center transition-colors">
+                    <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#FFFFFF"></path><path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.3v2.84C4.01 20.48 7.72 23 12 23z" fill="#4285F4"></path><path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.3C1.46 8.87 1 10.4 1 12s.46 3.13 1.3 4.93l3.54-2.84z" fill="#FBBC05"></path><path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.72 1 4.01 3.52 2.3 6.93l3.54 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"></path></svg>
+                    使用 Google 登入並查詢
+                </button>
+            </div>
+            <div id="history-result-view" style="display: none;">
+                 <div class="flex justify-between items-center mb-4">
+                    <p id="welcome-message" class="text-lg text-gray-700"></p>
+                    <button id="logout-btn" class="text-sm text-gray-500 hover:text-red-600">登出</button>
+                </div>
+                <h2 class="text-xl font-bold text-gray-700 mb-4">您的歷史訂單</h2>
+                <div id="history-orders-container" class="space-y-4">
+                    </div>
+            </div>
+        </div>
+        <div class="text-center mt-8">
             <a href="index.html" class="text-sm text-gray-600 hover:text-amber-800">返回首頁</a>
         </div>
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const queryBtn = document.getElementById('query-btn');
-            const orderIdInput = document.getElementById('order-id-input');
-            const resultContainer = document.getElementById('result-container');
-            const resultText = document.getElementById('result-text');
 
-            queryBtn.addEventListener('click', async () => {
-                const orderId = orderIdInput.value.trim();
-                if (!orderId) {
-                    alert('請輸入訂單編號！');
-                    return;
+<script>
+// 1. Firebase 初始化設定
+// 請將您從 Firebase Console 複製的設定貼到這裡
+const firebaseConfig = {
+  apiKey: "AIzaSyAzEmU5nEtGpjJVpVlND67lYn_b0q3hwvQ",
+  authDomain: "zhuyixuan-order-qurey.firebaseapp.com",
+  projectId: "zhuyixuan-order-qurey",
+  storageBucket: "zhuyixuan-order-qurey.firebasestorage.app",
+  messagingSenderId: "346620859038",
+  appId: "1:346620859038:web:a174817ae8b406e4d1e18f",
+  measurementId: "G-F4DKNDRHG3"
+};
+
+// 初始化 Firebase
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const provider = new firebase.auth.GoogleAuthProvider();
+
+document.addEventListener('DOMContentLoaded', () => {
+    // --- 頁籤切換邏輯 ---
+    const tabSingle = document.getElementById('tab-single');
+    const tabHistory = document.getElementById('tab-history');
+    const contentSingle = document.getElementById('content-single');
+    const contentHistory = document.getElementById('content-history');
+
+    tabSingle.addEventListener('click', () => {
+        contentSingle.style.display = 'block';
+        contentHistory.style.display = 'none';
+        tabSingle.classList.add('bg-amber-800', 'text-white');
+        tabSingle.classList.remove('bg-gray-200', 'text-gray-600');
+        tabHistory.classList.add('bg-gray-200', 'text-gray-600');
+        tabHistory.classList.remove('bg-amber-800', 'text-white');
+    });
+
+    tabHistory.addEventListener('click', () => {
+        contentSingle.style.display = 'none';
+        contentHistory.style.display = 'block';
+        tabHistory.classList.add('bg-amber-800', 'text-white');
+        tabHistory.classList.remove('bg-gray-200', 'text-gray-600');
+        tabSingle.classList.add('bg-gray-200', 'text-gray-600');
+        tabSingle.classList.remove('bg-amber-800', 'text-white');
+    });
+
+    // --- 功能邏輯 ---
+
+    // (A) 單筆訂單查詢 (您原有的邏輯)
+    const queryBtnSingle = document.getElementById('query-btn-single');
+    const orderIdInput = document.getElementById('order-id-input');
+    const resultContainerSingle = document.getElementById('result-container-single');
+    const resultTextSingle = document.getElementById('result-text-single');
+    const itemsContainerSingle = document.getElementById('items-container-single');
+    const itemsListSingle = document.getElementById('items-list-single');
+
+    queryBtnSingle.addEventListener('click', async () => {
+        const orderId = orderIdInput.value.trim();
+        if (!orderId) {
+            alert('請輸入訂單編號！');
+            return;
+        }
+
+        queryBtnSingle.disabled = true;
+        queryBtnSingle.textContent = '查詢中...';
+        resultContainerSingle.style.display = 'none';
+
+        try {
+            const response = await fetch(`/.netlify/functions/query-order?orderId=${orderId}`);
+            const data = await response.json();
+
+            if (data.status === 'success') {
+                resultTextSingle.innerHTML = `訂單 <strong>${data.orderNumber}</strong> 的狀態為：<span class="font-bold text-2xl text-green-600">${data.orderStatus}</span>`;
+                if (data.items) {
+                    itemsListSingle.textContent = data.items;
+                    itemsContainerSingle.style.display = 'block';
+                } else {
+                    itemsContainerSingle.style.display = 'none';
                 }
+            } else {
+                resultTextSingle.textContent = data.message;
+            }
+        } catch (error) {
+            resultTextSingle.textContent = '查詢時發生錯誤，請稍後再試。';
+        } finally {
+            resultContainerSingle.style.display = 'block';
+            queryBtnSingle.disabled = false;
+            queryBtnSingle.textContent = '查詢';
+        }
+    });
 
-                queryBtn.disabled = true;
-                queryBtn.textContent = '查詢中...';
-                resultContainer.style.display = 'none';
+    // (B) 歷史訂單查詢 (新功能)
+    const loginBtnGoogle = document.getElementById('login-btn-google');
+    const logoutBtn = document.getElementById('logout-btn');
+    const historyLoginView = document.getElementById('history-login-view');
+    const historyResultView = document.getElementById('history-result-view');
+    const welcomeMessage = document.getElementById('welcome-message');
+    const historyOrdersContainer = document.getElementById('history-orders-container');
+    
+    // Google 登入按鈕事件
+    loginBtnGoogle.addEventListener('click', () => {
+        auth.signInWithPopup(provider)
+            .then(result => {
+                // 登入成功
+                const user = result.user;
+                updateUIForUser(user);
+                fetchHistoryOrders(user);
+            })
+            .catch(error => {
+                console.error("Google 登入失敗:", error);
+                alert("登入失敗，請稍後再試。");
+            });
+    });
 
-                try {
-                    const response = await fetch(`/.netlify/functions/query-order?orderId=${orderId}`);
-                    const data = await response.json();
+    // 登出按鈕事件
+    logoutBtn.addEventListener('click', () => {
+        auth.signOut().then(() => {
+            // 登出成功
+            updateUIForUser(null);
+        });
+    });
 
-                    if (data.status === 'success') {
-                        resultText.innerHTML = `訂單 <strong>${data.orderNumber}</strong> 的狀態為：<span class="font-bold text-2xl text-green-600">${data.orderStatus}</span>`;
-                        const itemsContainer = document.getElementById('items-container');
-                        const itemsList = document.getElementById('items-list');
+    // 監聽使用者登入狀態變化
+    auth.onAuthStateChanged(user => {
+        updateUIForUser(user);
+        if (user) {
+            fetchHistoryOrders(user);
+        }
+    });
 
-                        // 檢查回傳的資料中是否有 items 欄位
-                    if (data.items) {
-                            itemsList.textContent = data.items; // 將商品內容填入
-                            itemsContainer.style.display = 'block'; // 顯示商品區塊
-                   } else {
-                        itemsContainer.style.display = 'none'; // 如果沒有，就隱藏
-                    }
-                    } else {
-                        resultText.textContent = data.message;
-                    }
+    // 更新 UI 的函式
+    function updateUIForUser(user) {
+        if (user) {
+            historyLoginView.style.display = 'none';
+            historyResultView.style.display = 'block';
+            welcomeMessage.textContent = `歡迎，${user.displayName || user.email}`;
+        } else {
+            historyLoginView.style.display = 'block';
+            historyResultView.style.display = 'none';
+            historyOrdersContainer.innerHTML = ''; // 清空舊訂單
+        }
+    }
 
-                } catch (error) {
-                    resultText.textContent = '查詢時發生錯誤，請稍後再試。';
-                } finally {
-                    resultContainer.style.display = 'block';
-                    queryBtn.disabled = false;
-                    queryBtn.textContent = '查詢';
+    // 獲取歷史訂單的函式
+    async function fetchHistoryOrders(user) {
+        historyOrdersContainer.innerHTML = '<p class="text-gray-500">正在載入您的歷史訂單...</p>';
+        
+        try {
+            const token = await user.getIdToken();
+            const response = await fetch('/.netlify/functions/query-history', {
+                method: 'GET',
+                headers: {
+                    'Authorization': `Bearer ${token}`
                 }
             });
-        });
-    </script>
+
+            if (!response.ok) {
+                throw new Error('無法獲取訂單資料');
+            }
+
+            const orders = await response.json();
+
+            if (orders.length === 0) {
+                historyOrdersContainer.innerHTML = '<p class="text-gray-500">您目前沒有歷史訂單記錄。</p>';
+                return;
+            }
+
+            historyOrdersContainer.innerHTML = ''; // 清空載入提示
+            orders.forEach(order => {
+                const orderCard = document.createElement('div');
+                orderCard.className = 'p-4 border rounded-lg bg-white';
+                orderCard.innerHTML = `
+                    <div class="flex justify-between items-center">
+                        <p class="font-bold text-gray-800">${order.orderNumber}</p>
+                        <p class="text-sm text-gray-500">${order.date}</p>
+                    </div>
+                    <p class="mt-2 text-gray-600">狀態：<span class="font-semibold text-green-700">${order.orderStatus}</span></p>
+                    <div class="mt-2 pt-2 border-t">
+                        <p class="text-sm font-semibold text-gray-700">品項：</p>
+                        <pre class="text-sm text-gray-600 whitespace-pre-wrap font-sans">${order.items}</pre>
+                    </div>
+                `;
+                historyOrdersContainer.appendChild(orderCard);
+            });
+
+        } catch (error) {
+            console.error("獲取歷史訂單失敗:", error);
+            historyOrdersContainer.innerHTML = '<p class="text-red-500">載入訂單失敗，請稍後再試。</p>';
+        }
+    }
+});
+</script>
 </body>
 </html>
