0803 新增歷史訂單功能+物流查詢

--- a/coffee/query.html
+++ b/coffee/query.html
@@ -41,10 +41,21 @@
         </div>
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">訂單查詢</h1>
 
-        <div class="flex border-b mb-6">
-            <button id="tab-single" class="py-2 px-4 bg-amber-800 text-white font-semibold rounded-t-lg focus:outline-none">依訂單編號查詢</button>
-            <button id="tab-history" class="py-2 px-4 bg-gray-200 text-gray-600 font-semibold rounded-t-lg focus:outline-none">查詢歷史訂單</button>
-        </div>
+        <div class="flex border-b mb-6 items-center">
+    <div>
+        <button id="tab-single" class="py-2 px-4 bg-amber-800 text-white font-semibold rounded-t-lg focus:outline-none">依訂單編號查詢</button>
+        <button id="tab-history" class="py-2 px-4 bg-gray-200 text-gray-600 font-semibold rounded-t-lg focus:outline-none">查詢歷史訂單</button>
+    </div>
+
+    <div class="ml-auto flex items-center space-x-4 text-sm">
+        <a href="https://eservice.7-11.com.tw/e-tracking/search.aspx" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-amber-800 transition-colors">
+            7-11貨態查詢
+        </a>
+        <a href="https://postserv.post.gov.tw/pstmail/main_mail.html" target="_blank" rel="noopener noreferrer" class="text-gray-600 hover:text-amber-800 transition-colors">
+            郵局貨態查詢
+        </a>
+    </div>
+    </div>
 
         <div id="content-single">
             <div class="mb-4">
