--- a/coffee/shipping_form.html
+++ b/coffee/shipping_form.html
@@ -3,25 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>出貨單查詢</title>
+    <title>內部檢貨單產生系統</title>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f4f4f9; }
-        .container { background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); text-align: center; }
-        h1 { color: #333; }
-        form { margin-top: 1.5rem; }
-        input[type="text"] { padding: 0.75rem; width: 250px; border: 1px solid #ccc; border-radius: 4px; font-size: 1rem; }
-        button { padding: 0.75rem 1.5rem; border: none; background-color: #007bff; color: white; font-size: 1rem; border-radius: 4px; cursor: pointer; margin-left: 0.5rem; }
-        button:hover { background-color: #0056b3; }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f2f5;
+        }
+        .container {
+            background: white;
+            padding: 2.5rem;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+            text-align: center;
+            width: 90%;
+            max-width: 420px;
+        }
+        h1 {
+            color: #1c1e21;
+            margin-bottom: 2rem;
+            font-size: 1.8rem;
+        }
+        form div {
+            margin-bottom: 1.5rem;
+            text-align: left;
+        }
+        label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: 600;
+            color: #606770;
+        }
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            box-sizing: border-box;
+            padding: 0.8rem;
+            border: 1px solid #dddfe2;
+            border-radius: 6px;
+            font-size: 1rem;
+        }
+        button {
+            width: 100%;
+            padding: 0.8rem 1.5rem;
+            border: none;
+            background-color: #2c3e50;
+            color: white;
+            font-size: 1.1rem;
+            border-radius: 6px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.3s;
+            margin-top: 1rem;
+        }
+        button:hover {
+            background-color: #34495e;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>出貨單查詢系統</h1>
+        <h1>內部檢貨單產生系統</h1>
+
         <form action="https://n8n-zhuyixuan.zeabur.app/webhook/981e4c0e-0610-45af-8b0a-3defe247fcf5" method="POST" target="_blank">
-            <label for="orderId">請輸入訂單編號：</label>
-            <br><br>
-            <input type="text" id="orderId" name="orderId" placeholder="例如：ORD-2025-001" required>
-            <button type="submit">產生出貨單</button>
+            
+            <div>
+                <label for="orderId">訂單編號：</label>
+                <input type="text" id="orderId" name="orderId" placeholder="請輸入完整的訂單編號" required>
+            </div>
+
+            <div>
+                <label for="queryCode">內部查詢碼：</label>
+                <input type="password" id="queryCode" name="queryCode" placeholder="請輸入通用查詢碼" required>
+            </div>
+            
+            <button type="submit">產生檢貨單</button>
         </form>
     </div>
 </body>
