0808 增加首頁影片觀看

--- a/platycerium/platycerium.html
+++ b/platycerium/platycerium.html
@@ -510,21 +510,23 @@
         <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
             
             <a href="#" class="open-video-btn block relative rounded-lg overflow-hidden shadow-lg card-hover" data-youtube-id="-rGBVpfNngY">
-                <img src="https://img.youtube.com/vi/-rGBVpfNngY/maxresdefault.jpg" alt="鹿角蕨上板教學影片封面" class="w-full aspect-video object-cover">
+                <img src="https://img.youtube.com/vi/-rGBVpfNngY/maxresdefault.jpg" alt="鹿角蕨上板教學影片" class="w-full aspect-video object-cover">
                 <div class="absolute inset-0 flex items-center justify-center bg-black/30">
                     <svg class="w-16 h-16 text-white/80" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"></path></svg>
                 </div>
                 <div class="absolute bottom-0 left-0 bg-black/50 text-white text-sm p-2 w-full">鹿角蕨上板</div>
             </a>
 
-            <a href="#" class="open-video-btn block relative rounded-lg overflow-hidden shadow-lg card-hover" data-youtube-id="6wXAnZiMWPs"> <img src="/images/AR sporeling.jpg" alt="影片二封面" class="w-full aspect-video object-cover">
+            <a href="#" class="open-video-btn block relative rounded-lg overflow-hidden shadow-lg card-hover" data-youtube-id="6wXAnZiMWPs"> 
+                <img src="https://img.youtube.com/vi/6wXAnZiMWPs/maxresdefault.jpg" alt="P. veitchii AR sporeling" class="w-full aspect-video object-cover">
                 <div class="absolute inset-0 flex items-center justify-center bg-black/30">
                     <svg class="w-16 h-16 text-white/80" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"></path></svg>
                 </div>
                 <div class="absolute bottom-0 left-0 bg-black/50 text-white text-sm p-2 w-full">AR sporeling</div>
             </a>
 
-            <a href="#" class="open-video-btn block relative rounded-lg overflow-hidden shadow-lg card-hover" data-youtube-id="cf1UM6iSJD8"> <img src="/images/亞猴.jpg" alt="影片三封面" class="w-full aspect-video object-cover">
+            <a href="#" class="open-video-btn block relative rounded-lg overflow-hidden shadow-lg card-hover" data-youtube-id="cf1UM6iSJD8"> 
+                <img src="https://img.youtube.com/vi/cf1UM6iSJD8/maxresdefault.jpg" alt="P. ridleyi" class="w-full aspect-video object-cover">
                 <div class="absolute inset-0 flex items-center justify-center bg-black/30">
                     <svg class="w-16 h-16 text-white/80" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"></path></svg>
                 </div>
