0808 增加首頁影片觀看+favicon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>竹意軒 | 觀賞植栽與自烘單品咖啡</title>
+    <title>竹意軒 | 鹿角蕨、觀賞植栽與自烘單品咖啡</title>
+    <link rel="icon" type="image/png" href="/favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
