0809 優化GA4分析內容

--- a/platycerium/platycerium.html
+++ b/platycerium/platycerium.html
@@ -766,8 +766,7 @@ document.addEventListener('DOMContentLoaded', function() {
             e.preventDefault();
             const youtubeId = this.dataset.youtubeId;
             
-            playerContainer.innerHTML = `<iframe class="w-full h-full" src="https://www.youtube.com/embed/${youtubeId}?autoplay=1&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
-            
+            playerContainer.innerHTML = `<iframe class="w-full h-full" src="https://www.youtube.com/embed/${youtubeId}?autoplay=1&rel=0&enablejsapi=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
             videoModal.classList.remove('hidden');
         });
     });
