--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
                         </div>
                         <div class="absolute bottom-0 left-0 bg-black/50 text-white text-sm p-2 w-full text-center">報歲蘭"台北小姐"</div>
                     </a>
-                    <a href="#" class="open-video-btn block relative rounded-lg overflow-hidden shadow-lg gallery-img" data-youtube-id="et9gt228bYM">
-                        <img src="https://img.youtube.com/vi/et9gt228bYM/maxresdefault.jpg" alt="娜娜乳香 Boswellia nana" class="w-full aspect-video object-cover">
+                    <a href="#" class="open-video-btn block relative rounded-lg overflow-hidden shadow-lg gallery-img" data-youtube-id="8EHWkQ-pP1Y">
+                        <img src="https://img.youtube.com/vi/8EHWkQ-pP1Y/maxresdefault.jpg" alt="帝冠仙人掌 Obregonia denegrii" class="w-full aspect-video object-cover">
                         <div class="absolute inset-0 flex items-center justify-center bg-black/30">
                             <svg class="w-16 h-16 text-white/80" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"></path></svg>
                         </div>
-                        <div class="absolute bottom-0 left-0 bg-black/50 text-white text-sm p-2 w-full text-center">娜娜乳香</div>
+                        <div class="absolute bottom-0 left-0 bg-black/50 text-white text-sm p-2 w-full text-center">帝冠仙人掌</div>
                     </a>
                 </div>
             </div>
